<resources>
    <string name="app_name">fitness-app-android</string>

    <string name="action_settings">Einstellungen</string>
    <string name="level">Gewicht / Niveau</string>
    <string name="position">Positionen</string>
    <string name="note">Notizen</string>
    <string name="description">Beschreibung</string>
    <string name="prepare_seconds">Aufwärmen</string>
    <string name="rest_seconds">Pause</string>
    <string name="seconds">Zeit</string>

    <string name="activity_workouts">Trainingseinheiten</string>
    <string name="activity_exercise_list">Übungen</string>
    <string name="title_activity_exercise_start" translatable="false">ExerciseStartActivity</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="title_activity_base" translatable="false">BaseActivity</string>

    <string name="placeholder_workout_title" translatable="false">${WORKOUT_TITLE}</string>
    <string name="placeholder_workout_description" translatable="false">${WORKOUT_DESCRIPTION}</string>
    <string name="placeholder_exercise_seconds" translatable="false">${SECONDS}</string>
    <string name="placeholder_exercise_title" translatable="false">${EXERCISE_TITLE}</string>
    <string name="placeholder_exercise_description" translatable="false">${EXERCISE_DESCRIPTION}</string>
    <string name="placeholder_exercise_remaining_seconds" translatable="false">${RS}</string>
    <string name="placeholder_exercise_next_exercise" translatable="false">${NEXT_EXERCISE}</string>
    <string name="placeholder_exercise_note" translatable="false">${EXERCISE_NOTE}</string>

    <string name="title">Titel</string>
    <string name="apply">Anwenden</string>
    <string name="cancel">Abbrechen</string>
    <string name="next_exercise">Nächste Übung</string>


    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="language">Sprache</string>
    <string name="placeholder_exercise_level" translatable="false" >${EXERCISE_LEVEL}</string>
    <string name="placeholder_exercise_position" translatable="false">${EXERCISE_POSITION}</string>
</resources>
